Correções do autor Capítulo II

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -477,9 +477,7 @@ contudo, a fama é ainda algo mais que a degustação de nosso
 amor-próprio, como Schopenhauer a chamou\footnote{Cf. o capítulo ``Von
   Dem, was Einer vorstellt'' (Sobre aquilo que alguém representa), de
   ``Aphorismen zur Lebensweisheit'' (Aforismos de sabedoria de vida).
-  In: \emph{Parerga e Paralipomena
-%Referência incompleta. Única ocorrência. Vai assim?
-  }.}; ela é a crença na correlação e
+  In: \emph{Parerga e Paralipomena}. Zurique: Haffmans Verlag, 1999.}; ela é a crença na correlação e
 continuidade do grandioso de todas as épocas, é um protesto contra a
 mudança de gerações e do passado.
 
@@ -495,7 +493,7 @@ homens produtivos, ativos e cultivados em um novo espírito; isso lhe
 fortaleceria a percepção de que a cultura da Renascença apoiava-se nos
 ombros de um bando de centenas de tais homens.
 
-E contudo -- para aprender com mesmo exemplo algo novo -- quão fluida e
+E contudo -- para aprender com o mesmo exemplo algo novo -- quão fluida e
 pendente, quão imprecisa seria essa comparação! Quanta diferença se teve
 de omitir para que ela tivesse aquele efeito vigoroso, quão
 violentamente se teve de comprimir a individualidade do passado em uma
@@ -514,7 +512,7 @@ mesmo encadeamento de motivos, o mesmo \emph{deus ex machina}, a mesma
 catástrofe, os poderosos poderiam desejar a história monumental
 revestida da \emph{veracidade} de um ícone, ou seja, desejar todo fato
 em sua exata peculiaridade e singularidade: provavelmente isso não
-acontecerá até que os astrônomos voltarem a ser astrólogos. Até lá, a
+acontecerá até que os astrônomos voltem a ser astrólogos. Até lá, a
 história monumental poderá não precisar daquela veracidade toda: ela
 sempre aproximará, universalizará e, enfim, igualará o desigual, sempre
 enfraquecerá a diversidade dos motivos e ocasiões, a fim de tomar, de
@@ -565,7 +563,7 @@ viver e transformar em prática o que foi aprendido. O caminho destes é
 obstruído, o ar escurece, quando aqueles dançam, com idolatria e zelo,
 em torno de um monumento, entendido pela metade, de um passado grandioso
 qualquer, como se quisessem dizer: ``Vejam, isto é a arte verdadeira e
-real: o que importa, os que se transformam e os que têm querer!''
+real: não nos importam os que se transformam e os que têm querer!''
 Aparentemente, essa turba dançante tem até o privilégio do ``bom
 gosto'': pois aquele que cria esteve sempre em desvantagem diante
 daquele que só observa e não executa com as próprias mãos, assim como,
@@ -589,7 +587,7 @@ médicos, quando no fundo pretendem envenenar, cultivando sua língua e
 seu paladar para atribuir a essa deseducação a recusa de pratos
 artísticos nutritivos. Porque eles não querem que o grandioso surja, seu
 remédio é dizer: ``veja, o grandioso já está aí!'' Na verdade, esse
-grandioso que já está aí lhes importa tão pouco quanto o que surge,
+grandioso que já está aí lhes importa tão pouco quanto o que surge:
 disso sua vida dá testemunho. A história monumental é a máscara pela
 qual dão vazão a seu ódio dirigido contra os homens grandes e poderosos
 de sua época, através de seu maravilhamento exagerado diante dos homens
