Correções do autor Capítulos III a V

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -618,7 +618,7 @@ como ervas daninhas quando afastadas de seus solos naturais.
 Em segundo lugar, a história também pertence ao conservador e reverente que, 
 com fidelidade e amor, olha para trás, de onde veio e de
 onde veio a ser; ele traz igualmente, por meio dessa piedade, a gratidão
-por sua existência. Cuidando com zelo do que é antigo e permanente, preservar
+por sua existência. Cuidando com zelo do que é antigo e permanente, quer preservar
  as condições sob as quais surgiu e outros deverão
 surgir depois dele -- e assim ele serve à vida. Em tal espírito, a posse
 dos utensílios ancestrais\footnote{Referência ao \emph{Fausto}, de
@@ -823,7 +823,7 @@ tornará uma primeira.
     homens. Quanto mais houver um devir retroativo, tanto mais todas as
     perspectivas são empurradas para o infinito. Nenhuma geração
     assistiu a esse espetáculo de forma tão explícita como a ciência do
-    devir universal, a história, hoje o apresenta: certamente ela o
+    devir universal, a história, hoje o apresenta; certamente ela o
     apresenta com a perigosa temeridade de seu lema: \emph{Fiat veritas
     pereat vita}\footnote{Que a verdade se realize e que o mundo pereça.}.
 
@@ -852,7 +852,7 @@ tornará uma primeira.
     interior caótico, que aquele homem moderno, com raro orgulho,
     denomina como sua mais própria ``interioridade''. Bem que se diz que
     ele teria um conteúdo, faltando-lhe apenas a forma; mas em todo
-    vivente isso é uma contradição completamente impertinente. Por isso
+    vivente isso é uma contradição totalmente imprópria. Por isso
     nossa cultura moderna não é algo vivo, ela não pode ser compreendida
     sem aquela contradição, isto é: ela não é uma verdadeira cultura,
     mas uma espécie de saber em torno da cultura; ela permanece sendo
@@ -904,7 +904,7 @@ tornará uma primeira.
     estilo artístico em todas as expressões vitais de um povo\footnote{Nietz\-sche
       refere-se aqui a sua formulação de cultura presente na primeira
       extemporânea, \emph{David Strauss, o devoto e o escritor}.};\label{vitaisdeumpovo} essa
-    designação não deve ser mal-entendida como se tratasse de uma
+    designação não deve ser mal-entendida como se se tratasse de uma
     oposição entre barbárie e \emph{belo} estilo; o povo a que se
     prescreve uma cultura deve ser, em toda efetividade, apenas uma
     unidade viva e não se dividir penosamente em interior e exterior,
@@ -949,7 +949,7 @@ tornará uma primeira.
     Mas há também um célebre perigo nessa interioridade: o próprio
     conteúdo, que se considera não poder ser visto de fora, pode,
     eventualmente, dissipar-se; de fora, ele não seria percebido, nem em
-    sua dissipação nem sua presença prévia. Mas se ao menos pensarmos no
+    sua dissipação nem em sua presença prévia. Mas se ao menos pensarmos no
     povo alemão o mais afastado possível desse perigo: o estrangeiro
     está certo em nos objetar que nosso interior é muito fraco e
     desordenado para agir exteriormente e se dar forma. Nisso o alemão
@@ -973,10 +973,9 @@ tornará uma primeira.
     como parece concordar, por exemplo, Grillparzer\footnote{Franz
       Grillparzer (1791-1872), poeta e dramaturgo austríaco.}, que
     observa, de modo marginal e discreto, a partir de sua experiência
-    dramático-teatral: ``Nós sentimos com abstração'', diz ele, ``não
-    sabemos mais como o sentimento se expressa nos nossos
-    contemporâneos; deixamo-los atuar como eles não mais fazem hoje em
-    dia. Shakespeare nos fez, nós modernos, apodrecer''.
+    dramático-teatral: ``Nós sentimos com abstrações'', diz ele, 
+    ``não mais sabemos como nossos contemporâneos expressam seus sentimentos; 
+    fazemo-los agir como  hoje ninguém mais age. Shakespeare nos arruinou''.
 
     Esse é um caso singular, significativo, talvez muito rapidamente
     generalizável: mas como seria terrível sua legítima generalização
@@ -1068,10 +1067,8 @@ foge quando vocês cobrem seus atos com a tenda da história. Quem quer
 entender, calcular, compreender, no instante em que deveria suportar,
 numa longa convulsão, o incompreensível e o sublime, pode ser chamado de
 racional, mas apenas no sentido em que Schiller fala do senso dos
-racionais\footnote{Referência ao poema ``As palavras de fé'', de
-  Schiller. Em alemão: ``Verstand der Verständige
-  % Conferir original, não encontrei o poema pelo alemão
-  ''.}: ele não vê o
+racionais\footnote{Referência ao poema ``As palavras da fé'', de
+  Schiller. Em alemão: ``Verstand der Verständige''.}: ele não vê o
 mesmo que uma criança vê, não ouve o mesmo que uma criança ouve; mas
 esse ``mesmo'' é o mais importante: pois, ao não entendê-lo, seu senso é
 mais infantil do que o da criança e mais ingênuo do que a
