Correções do autor até o final

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -1347,7 +1347,7 @@ populares e que escrever de acordo com sua época significa ser justo;
 uma fé que anima toda religião e sobre a qual, nas religiões, nada mais
 temos a dizer. Esses historiadores ingênuos chamam ``objetividade''
 medir as opiniões e os fatos passados a partir das opiniões difundidas
-no momento, aqui eles encontram o cânone de toda verdade: seu trabalho é
+no momento; aqui eles encontram o cânone de toda verdade: seu trabalho é
 ajustar o passado à trivialidade atual. Caso contrário, chamam de
 subjetivista toda historiografia que não toma a opinião popular como
 canônica.
@@ -1654,9 +1654,7 @@ leitura da vida e obra dos filósofos de Diógenes Laércio:
 saber, que o que há de passageiro e mutável dos pensamentos e sistemas
 humanos me tinha atingido de forma quase mais trágica do que os
 destinos, que frequentemente são considerados a única
-realidade''\footnote{Carta de Hölderlin a 
-%Conferir se J. v. Sinclair não é, na verdade, Isaac von Sinclair
-J. v. Sinclair de 24/12/1798.}.
+realidade''\footnote{Carta de Hölderlin a Isaak v. Sinclair de 24/12/1798.}.
 Não, tal história transbordante, ensurdecedora e violenta certamente não
 é necessária para a juventude, como mostravam os antigos, sendo até
 mesmo perigosa, como mostram os modernos. No entanto, observem os
@@ -1790,9 +1788,7 @@ esperanças: só contra a vontade ela deixa que o devir a estimule e, no
 momento certo, o desconsidera e o sacrifica, como uma sedução para a
 existência, como uma mentira a respeito da vida. Aquilo que os
 florentinos faziam, quando eles, impressionados com os sermões de
-Savonarola\footnote{Girolamo Savonarola (1452-98), monge
-%frade dominicano, Ordem não monástica, verificar
- italiano.},
+Savonarola\footnote{Girolamo Savonarola (1452-98), frade italiano.},
 patrocinaram aquelas célebres fogueiras sacrificais, queimando quadros,
 manuscritos, espelhos e máscaras, o cristianismo podia fazer com
 qualquer cultura que estimula a perseverança e toma o \emph{memento
@@ -1930,7 +1926,7 @@ que um poder qualquer titereia\footnote{No alemão, ``\emph{am Faden
   figurativamente quer dizer controlar, exercer influência. Seguimos
   aqui a sugestão de ambos os tradutores de língua inglesa de fazer
   referência às marionetes chinesas, o que está implícito no texto em
-  alemão: ``der nicht zuletzt chinesenhaft-mechanisch sein `Ja' zu jeder
+  alemão: ``der nickt zuletzt chinesenhaft-mechanisch sein `Ja' zu jeder
   Macht'' (``que enfim balança a cabeça com seu `sim', de forma
   mecânico-chinesa, a todo poder'').}. Contivesse aquele resultado uma
 necessidade racional em si, fosse aquele evento a vitória da lógica ou
