--- a/LIVRO.tex
+++ b/LIVRO.tex
@@ -4,6 +4,9 @@
 \usepackage[bolso]{hedra}
 
 \usepackage{gitrevisioninfo}
+\usepackage{penalidades}
+
+\renewcommand{\pontinhos}{.}
 
 \renewcommand{\asterisc}{{\centering\adforn{47}\par}}
 
