--- a/fichatecnica.sty
+++ b/fichatecnica.sty
@@ -5,10 +5,10 @@
 \newcommand{\sumariotitulo}{\titulo}
 \newcommand{\sumarioautor}{\autor}
 
-\newcommand{\organizador}{André Luís Mota Itaparica}
+%\newcommand{\organizador}{André Luís Mota Itaparica}
 \newcommand{\autor}{Friedrich Nietzsche}
 %\newcommand{\introdutor}{Introdutor}  % Obrigatório!
-%\newcommand{\tradutor}{}
+\newcommand{\tradutor}{André Luís Mota Itaparica}
 
 % Capa
 %\newcommand{\orelha}{}
@@ -18,19 +18,19 @@
 
 % Página de créditos
 \newcommand\copyrightlivro{Hedra}
-\newcommand\copyrighttraducao{Tradutor} % Copy de tradução
+\newcommand\copyrighttraducao{André Luís Mota Itaparica} % Copy de tradução
 %\newcommand\copyrightorganizacao{}
 %\newcommand\copyrightilustracao{}
 %\newcommand\copyrightintroducao{}
-\newcommand\titulooriginal{Titulo original}
-\newcommand\edicaoconsultada{Edição consultada}
-\newcommand\primeiraedicao{Primeira edição}
+\newcommand\titulooriginal{Unzeitgemäße Betrachtungen. Zweites Stück: Vom Nutzen und Nachteil der Historie für das Leben}
+\newcommand\edicaoconsultada{Colli-Montinari. \emph{Sämtliche Werke.} Kritische Studienausgabe. Bd. 1. Berlim/Munique: Walter de Gruyter, 1988.}
+\newcommand\primeiraedicao{1874}
 %\newcommand\agradecimentos{}
 %\newcommand\indicacao{}
 %\newcommand\ISBN{}
 \newcommand\ano{2014}
 \newcommand\edicao{Jorge Sallum}
-\newcommand\coedicao{José Eduardo Góes}
+\newcommand\coedicao{José Eduardo S. Góes}
 \newcommand\assistencia{Equipe Hedra}
 %\newcommand\revisao{}
 %\newcommand\preparacao{}
