--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -77,7 +77,7 @@ que sentido teria a filologia clássica em nossos dias senão o de
 intervir extemporaneamente, isto é, contra a época, sobre a época e a
 favor de uma época futura.\label{epocafutura}
 
-\chapter{Capítulo 1}
+\chapter{1}
 
 Observe o rebanho a pastar: ele nada sabe do que é o ontem e o hoje;
 saltita aqui e acolá, come, descansa, digere, novamente saltita, noite e
@@ -304,8 +304,8 @@ sobre os quais David Hume comentou com ironia:
 \begin{verse}
 \emph{And from the dregs of life hope to receive,}\\
 \emph{What the first sprightly running could not give.}\\
-{[}E, do que sobrou no copo da vida, esperam tomar\\
-Aquilo que o primeiro gole de vigor não pôde dar.{]}\footnote{Segundo
+E, do que sobrou no copo da vida,\qb{} esperam tomar\\
+Aquilo que o primeiro gole de vigor\qb{} não pôde dar.\footnote{Segundo
   Walter Kaufmann (\emph{Nietz\-sche} -- Philosopher, psychologist,
   antichrist. Princeton: Princeton University Press, 1974),
   citação da peça \emph{Aureng-zebe}, de John Dryden, incluída no
@@ -398,7 +398,7 @@ preocupações no que diz respeito à saúde de um homem, de um povo, de uma
 cultura. Pois o excesso de história destrói e degenera a vida,
 degenerando, por fim, a própria história.
 
-\chapter{Capítulo 2}\label{capuxedtulo-2}
+\chapter{2}\label{capuxedtulo-2}
 
 Que a vida precisa do serviço da história é algo que deve ser entendido
 com tanta clareza quanto esta sentença, que posteriormente deverá ser
@@ -613,7 +613,7 @@ sem necessidade, o antiquário sem piedade, o conhecedor do grandioso sem
 a capacidade do grandioso são tais plantas degeneradas, que se alastram
 como ervas daninhas quando afastadas de seus solos naturais.
 
-\chapter{Capítulo 3}\label{capuxedtulo-3}
+\chapter{3}\label{capuxedtulo-3}
 
 Em segundo lugar, a história também pertence ao conservador e reverente que, 
 com fidelidade e amor, olha para trás, de onde veio e de
@@ -788,7 +788,7 @@ crítica, um consolo suspeito: saber que aquela primeira natureza já foi
 uma vez uma segunda natureza e que aquela segunda natureza vitoriosa se
 tornará uma primeira.
 
-  \chapter{Capítulo 4}\label{capuxedtulo-4}
+  \chapter{4}\label{capuxedtulo-4}
 
     Esses são os serviços que a história pode prestar à vida; todo homem
     e todo povo precisam, segundo seus objetivos, forças e necessidades,
@@ -1028,7 +1028,7 @@ tornará uma primeira.
     contradição entre forma e conteúdo, entre interioridade e
     convenção}.
 
-  \chapter{Capítulo 5}\label{capítulo-5}
+  \chapter{5}\label{capítulo-5}
 
 
 A saturação de uma época com a história me parece ser adversa e perigosa,
@@ -1236,7 +1236,7 @@ falta de medida de sua efusão crítica, nessa ausência de domínio sobre
 si mesmos, que os romanos chamavam \emph{impotentia}, revela-se a
 fraqueza da personalidade moderna.
 
-\chapter{Capítulo 6}\label{capuxedtulo-6}
+\chapter{6}\label{capuxedtulo-6}
 
 Mas deixemos de lado essa fraqueza. Façamos uma questão incômoda a uma
 notória força do homem moderno: tem ele o direito de se designar, pela
@@ -1527,7 +1527,7 @@ heróis. Com uma centena de homens educados dessa maneira antimoderna,
 isto é, maduros e habituados ao heroico, pode-se calar toda a cultura
 baixa e barulhenta desta época.
 
-\chapter{Capítulo 7}\label{capuxedtulo-7}
+\chapter{7}\label{capuxedtulo-7}
 
 O sentido histórico, quando reina \emph{de forma incontrolada} e extrai
 todas as suas consequências, extingue o futuro, pois destrói as ilusões
@@ -1724,7 +1724,7 @@ ao estranho e mesmo ao próprio bem. Se o chão ainda nos suportar! E se
 ele não mais nos suportar, tudo bem -- assim eles sentem e vivem uma
 existência \emph{irônica}.
 
-\chapter{Capítulo 8}\label{capuxedtulo-8}
+\chapter{8}\label{capuxedtulo-8}
 
 Embora possa parecer estranho, não é contudo contraditório quando
 atribuo, a uma época que costuma manifestar-se de forma tão gritante e
@@ -1995,7 +1995,7 @@ leva insistentemente adiante: e se eles mesmo nascerem como rebentos
 tardios -- existe uma maneira de esquecer isso; as gerações futuras só
 os conhecerão como primogênitos.
 
-\chapter{Capítulo 9}\label{capuxedtulo-9}
+\chapter{9}\label{capuxedtulo-9}
 
 Talvez seja nossa época esse primogênito? -- De fato, a veemência de
 seu sentido histórico é tão grande, sua expressão, tão universal e
@@ -2384,7 +2384,7 @@ sem olhos, sem dentes, sem paladar, sem nada.\footnote{Shakespeare,
   se redimisse desses homens e idosos. Aí então adviria o reino da
   juventude!
 
-\chapter{Capítulo 10}\label{capuxedtulo-10}
+\chapter{10}\label{capuxedtulo-10}
 
 Neste momento, pensando na \emph{juventude}, eu brado: terra à
     vista! Terra à vista! Satisfeito e mais que satisfeito desta viagem
